<resources>
    <!-- 欢迎页txt-->
    <string name="logo_txt">华汽投资控股有限公司</string>

    <string name="app_name">蓝领驿家二期</string>
    <string name="main_navigation_circle">圈子</string>
    <string name="main_navigation_diagnose">云诊</string>
    <string name="main_navigation_im">消息</string>
    <string name="main_navigation_study">智库</string>

    <!--登录 注册 修改密码-->
    <string name="phone_number">手机号</string>
    <string name="input_number">请输入您的手机号</string>
    <string name="sms_text">请输入验证码</string>
    <string name="input_pasword">请输入您的密码</string>
    <string name="register_pasword">请输入您的账号密码</string>
    <string name="getverify_number">获取验证码</string>
    <string name="password">密码</string>
    <string name="login_text">登录</string>
    <string name="quit_login">退出登录</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空哦</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_at">立即注册</string>
    <string name="home_page">我是首页</string>
    <string name="register">注册</string>
    <string name="sms_Verify">短信验证码</string>
    <string name="register_andlogin">注册并登录</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6至32位密码</string>
    <string name="agree_xieyi">请点击同意协议</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="count_down">%s秒后重发</string>
    <string name="commit">提交</string>
    <string name="next_step">下一步</string>
    <string name="confirm_password">确认密码</string>
    <string name="again_register_pasword">请再次输入您的账号密码</string>
    <string name="username_orpassword_error">用户名或者密码错误，请重新输入！</string>
    <string name="modify_successfully">恭喜修改成功！</string>

    <!-- 首页-->
    <string name="voice_help">语音求助</string>
    <string name="video_help">视频求组</string>
    <string name="tel_record">呼叫记录</string>
    <!--个人中心-->
    <string name="personal_centter">个人中心</string>
    <string name="user_name">未设置</string>
    <string name="more_content">更多内容敬请期待!!!</string>
    <!--个人信息-->
    <string name="head_portrait">头像</string>
    <string name="basic_info">基本信息</string>
    <string name="pet_name">昵称</string>
    <string name="to_set_up">待设置</string>
    <string name="date_birth">出生日期</string>
    <string name="address">地址</string>
    <string name="county">雨花台</string>
    <string name="provincial">江苏</string>
    <string name="city">南京</string>
    <string name="technic_certificat">技师认证</string>
    <string name="commit_certificat_info">*提交认证信息可升级为技师哦</string>
    <string name="go_authentication">去认证</string>
    <string name="specialist_certificat">专家认证</string>
    <string name="domestic_consumer">普通用户</string>
    <string name="Input_box_cannot_be_empty">输入框内容不能为空</string>

    <!--设置-->
    <string name="setting_str">设置</string>
    <string name="login_pswd">登录密码</string>
    <string name="jianyi">建议您定期修改密码以保护账户安全</string>
    <string name="version">版本检测</string>
    <string name="yijian">意见反馈</string>
    <string name="send_feedback">发送</string>


    <!-- 直通-->
    <string name="str_wait">等待倒计时</string>

    // DO NOT TRANSLATE
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>

    <string name="score_str">感谢您的评分!</string>
    <string name="ceshi_str">王仁</string>
    <string name="search_finish">完成搜索</string>

    <!-- 邀请专家界面 -->
    <string name="str_cancle">取消</string>
    <string name="str_request_others">邀请他人</string>
    <string name="str_confirm">确定</string>

    <!-- 呼叫专家页面 -->
    <string name="call_experts">呼叫专家</string>

    <string name="str_content">邀请您会诊</string>
    <string name="str_title">您好!</string>
    <string name="str_request_success">邀请成功,耐心等待!</string>

    <string name="str_experts_name">张三</string>
    <string name="str_zhenduan">邀请您诊断</string>

    <string name="str_agree_zhenduan">同意您的邀请</string>

    <string name="str_hand_up">拒绝</string>
    <string name="str_answer">接听</string>

    <string name="label_send">Send</string>

    <string name="msg_say_something">Say something…</string>
    <string name="msg_no_network_connection">No network connection, please check the network settings</string>

    <string name="not_response_from_experts">目前暂无空闲的专家为您诊断，请稍后再试</string>

    <!--图片选择txt-->
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>

    <!--维修案例-->

    <!--技师认证-->
    <string name="real_information">真实姓名</string>
    <string name="real_information1">*</string>
    <string name="identity_card">身份证</string>
    <string name="the_frontof_identity_card">上传身份证正面</string>
    <string name="Id_is_opposite">上传身份证反面</string>
    <string name="shop_place">门店</string>
    <string name="please_select">请选择</string>
    <string name="authentication_information">认证信息</string>
    <string name="years_of_working">参加工作</string>
    <string name="type_of_work">工种</string>
    <string name="People_club_department_certificate">上传人社部证书</string>
    <string name="Submit_audit">提交审核</string>
    <string name="Before_completion_of_auditunchangeable">审核完成前，信息不可修改，请谨慎填写</string>
    <string name="select_type_work">请选择工种</string>
    <string name="A_technician_certification">技师认证</string>
    <string name="please_input">请输入...........</string>
    <string name="Congratulations_on_your_success">恭喜提交成功！</string>
    <string name="the_information_should_be_complete">信息要填写完整哦!</string>
    <string name="techinfoji">技能信息</string>
    <string name="certificate_tv">证书</string>
    <string name="Microsoft_Office_User_Specialist">专家认证</string>
    <string name="add_a_new_skill">添加新技能</string>
    <string name="transportation_vehicle_selection">车辆选择</string>
    <string name="Management_Applied_Personal_Skills_Training">技能管理</string>
    <!--车辆选择界面-->
    <string name="Good_at_brand">擅长品牌</string>
    <string name="Please_choose_your_range">请选择擅长范围</string>
    <string name="Good_at_range_tv">擅长范围:</string>
</resources>
