<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/action_title" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/image_marg"
                android:text="@string/basic_info"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/hint_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/personInf_height"
                android:layout_weight="1" />

        </LinearLayout>

        <View style="@style/person_center_view" />

        <RelativeLayout
            android:id="@+id/set_petname"
            style="@style/person_center_Rl">

            <TextView
                android:id="@+id/real_info"
                style="@style/person_center_tv"
                android:layout_alignBottom="@+id/petname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/real_information"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/text_size_15" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/real_info"
                android:text="@string/real_information1"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/right_back1"
                style="@style/person_center_image" />

            <TextView
                android:id="@+id/petname"
                style="@style/person_center_tv"
                android:layout_marginRight="@dimen/view_hight1"
                android:layout_toLeftOf="@id/right_back1"
                android:text="@string/to_set_up"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />


        </RelativeLayout>

        <RelativeLayout style="@style/person_center_Rl">

            <TextView
                android:id="@+id/identity"
                style="@style/person_center_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/identity_card"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/text_size_15" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/identity"
                android:text="@string/real_information1"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_marg"
            android:layout_marginRight="@dimen/image_marg">

            <FrameLayout
                android:id="@+id/identity_fl"
                android:layout_width="@dimen/identitywh_256"
                android:layout_height="@dimen/identityht_144"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_22">

                <ImageView
                    android:id="@+id/identity_frontage_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/techniciancertif_shape" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/space_20"
                    android:src="@drawable/plus_sign"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_20"
                    android:text="@string/the_frontof_identity_card"
                    android:textColor="@color/text_apha50"
                    android:textSize="@dimen/hint_size" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/identitywh_256"
                android:layout_height="@dimen/identityht_144"
                android:layout_below="@id/identity_fl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_20">

                <ImageView
                    android:id="@+id/identity_contrary_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/techniciancertif_shape" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/space_20"
                    android:src="@drawable/plus_sign"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_20"
                    android:text="@string/Id_is_opposite"
                    android:textColor="@color/text_apha50"
                    android:textSize="@dimen/hint_size" />
            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shop_place_rl"
            style="@style/person_center_Rl">

            <TextView
                android:id="@+id/shop_place"
                style="@style/person_center_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/shop_place"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/text_size_15" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/shop_place"
                android:text="@string/real_information1"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/right_backa"
                style="@style/person_center_image" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginRight="@dimen/view_hight1"
                android:layout_toLeftOf="@id/right_backa"
                android:text="@string/please_select"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/image_marg"
                android:text="@string/authentication_information"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/hint_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/personInf_height"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/years_of_working"
            style="@style/person_center_Rl">

            <TextView
                android:id="@+id/year_work"
                style="@style/person_center_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/years_of_working"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/text_size_15" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/year_work"
                android:text="@string/real_information1"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/right_backb"
                style="@style/person_center_image" />

            <TextView
                android:id="@+id/petnamea"
                style="@style/person_center_tv"
                android:layout_marginRight="@dimen/view_hight1"
                android:layout_toLeftOf="@id/right_backb"
                android:text="@string/to_set_up"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/type_work_rl"
            style="@style/person_center_Rl">

            <TextView
                android:id="@+id/type_work"
                style="@style/person_center_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/type_of_work"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/text_size_15" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/type_work"
                android:text="@string/real_information1"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/right_backc"
                style="@style/person_center_image" />

            <TextView
                style="@style/person_center_tv"
                android:layout_marginRight="@dimen/view_hight1"
                android:layout_toLeftOf="@id/right_backc"
                android:text="@string/to_set_up"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/credential_fl"
            android:layout_width="@dimen/identitywh_256"
            android:layout_height="@dimen/identityht_144"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_22">

            <ImageView
                android:id="@+id/identity_credentia_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/techniciancertif_shape" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_20"
                android:src="@drawable/plus_sign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_20"
                android:text="@string/People_club_department_certificate"
                android:textColor="@color/text_apha50"
                android:textSize="@dimen/hint_size" />
        </FrameLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/button_below_with"
            android:layout_height="@dimen/button_below_high"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/login_shape"
            android:text="@string/Submit_audit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="@dimen/space_30"
            android:text="@string/Before_completion_of_auditunchangeable"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</ScrollView>