<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp" android:paddingRight="10dp"
        android:layout_height="60dp" android:background="@color/transparent_75_white">
        <TextView
            android:id="@+id/cancle_btn"
            android:layout_width="60dp" android:textColor="@color/gray"
            android:layout_height="wrap_content" android:text="@string/str_cancle"
            android:onClick="onBtnCancleClicked"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="100dp" android:textColor="@color/black"
            android:layout_height="wrap_content" android:text="@string/str_request_others"
            android:textSize="20dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="60dp" android:textColor="@color/gray"
            android:layout_height="wrap_content" android:text="@string/str_confirm"
            android:onClick="onBtnSureClicked"
            android:textSize="18dp"
            android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" android:background="@color/gray"/>
    <com.sinoautodiagnoseos.propeller.ui.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ListView
        android:id="@+id/request_listview"
        android:divider="@drawable/list_item_divider"
        android:dividerHeight="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"/>
</LinearLayout>